# controlled-husky

./: .gitignore  README.md  mySetup.sh
src/husky_additional/husky_viz/rviz/: robot.rviz
src/husky_common/husky_gazebo/launch/: husky_empty_world.launch  husky_playpen.launch  playpen.launch
src/husky_highlevel/: README.md
src/husky_highlevel/husky_amcl_demo/: CMakeLists.txt  package.xml
src/husky_highlevel/husky_amcl_demo/launch/: husky_amcl.launch
