<?xml version="1.0"?>
<package format="2">
  <name>husky_amcl_demo</name>
  <version>0.0.0</version>
  <description>The husky_amcl_demo package</description>

  <maintainer email="shrinivasiyengar@live.com">Shrinivas Iyengar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>husky_gazebo</build_depend>
  <build_depend>husky_navigation</build_depend>
  <build_depend>husky_viz</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>husky_gazebo</build_export_depend>
  <build_export_depend>husky_navigation</build_export_depend>
  <build_export_depend>husky_viz</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>husky_gazebo</exec_depend>
  <exec_depend>husky_navigation</exec_depend>
  <exec_depend>husky_viz</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
  </export>
</package>
